addition subtraction error message for when there are no calculated morton codes

--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
                     <div id="a+b-calculateButton">
                         <button onclick="addition()">calculate</button>
                     </div>
+                    <div id="additionError" class="arithError"></div>
                 </div>
 
                 <div class="output">
@@ -190,7 +191,7 @@
                     <div id="a-b-calculateButton">
                         <button onclick="subtraction()">calculate</button>
                     </div>
-                    <div id="subtractionError" class="subtractionError"></div>
+                    <div id="subtractionError" class="arithError"></div>
                 </div>
                 <div class="output">
                     <div id="resultSubtraction" class="resultArithmetic"></div>
