9 point stencil morton codes output

--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                 <div class="output">
                     <div id="resultStencil-a" class="resultStencil">
                         <canvas id="canvasStencil-a" width="1500" height="700" style="width: 750px; height: 350px;"></canvas>
+                        <div id="stencilResult-a" class="result"></div>
                     </div>
                 </div>
             </div>
@@ -223,6 +224,7 @@
                 <div class="output">
                     <div id="resultStencil-b" class="resultStencil">
                         <canvas id="canvasStencil-b" width="1500" height="700" style="width: 750px; height: 350px;"></canvas>
+                        <div id="stencilResult-b" class="result"></div>
                     </div>
                 </div>
             </div>
