--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body onload="displayMaxCoord()">
     <h2>Morton Codes / Z-Order</h2>
 
     <div class="container">
@@ -46,193 +46,189 @@
             <div id="maxCoord">Maximum Coordinate Value: </div>
         </div>
 
-        <body onload="displayMaxCoord()">
 
-            <!-------------------------------------------------------------- Point A --------------------------------------------------------------->
 
-            <!-- Input Section for Coordinates -->
-            <div id="point-a" class="point">
-                <div class="input-section">
-                    <span class="label">point a:</span>
-                    <div id="a-coordinateInputs" class="coordinateInputs">
-                        <!-- X Coordinate -->
-                        <label for="a-x">x:</label>
-                        <div class="input-group">
-                            <input id="a-x">
-                            <div id="a-xError" class="error"></div>
-                        </div>
+        <!-------------------------------------------------------------- Point A --------------------------------------------------------------->
 
-                        <!-- Y Coordinate -->
-                        <label for="a-y">y:</label>
-                        <div class="input-group">
-                            <input id="a-y">
-                            <div id="a-yError" class="error"></div> 
-                        </div>
-
-                        <!-- Z Coordinate -->
-                        <label for="a-z" id="a-zLabel" class="hidden">z:</label>
-                        <div id="a-zInput" class="input-group hidden">
-                            <input id="a-z">
-                            <div id="a-zError" class="error"></div> 
-                        </div>
-
-                        <div id="a-calculateButton">
-                            <button onclick="calculateMortonCode('a')">calculate</button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Output Section -->
-                <div class="output">
-                    <!-- For-Loop -->
-                    <div class="output-section">
-                        <div id="a-magicBitsCodeContainer" class="hidden code-container"></div>
-                        <div id="a-forLoopHeader" class="header-section">
-                            <h3>method: for loop</h3>
-                            <button id="a-show-code-btn" class="show-code-btn"
-                                onclick="toggleCode('a-forLoopCodeContainer', 'a-magicBitsHeader', 'a-show-code-btn', 'a-resultMagicBits', forLoopCode)">
-                                show source code</button>
-                        </div>
-                        <div id="a-resultForLoop" class="result"></div>
+        <!-- Input Section for Coordinates -->
+        <div id="point-a" class="point">
+            <div class="input-section">
+                <span class="label">point a:</span>
+                <div id="a-coordinateInputs" class="coordinateInputs">
+                    <!-- X Coordinate -->
+                    <label for="a-x">x:</label>
+                    <div class="input-group">
+                        <input id="a-x">
+                        <div id="a-xError" class="error"></div>
                     </div>
 
-                    <!-- Magic Bits -->
-                    <div class="output-section">
-                        <div id="a-forLoopCodeContainer" class="hidden code-container"></div>
-                        <div id="a-magicBitsHeader" class="header-section">
-                            <h3>method: magic bits</h3>
-                            <button id="a-show-code-btn2" class="show-code-btn"
-                                onclick="toggleCode('a-magicBitsCodeContainer', 'a-forLoopHeader','a-show-code-btn2','a-resultForLoop', 'magicBitsCode')">
-                                show source code</button>
-                        </div>
-
-                        <div id="a-resultMagicBits" class="result"></div>
-                    </div>
-                </div>
-            </div>
-            <!-------------------------------------------------------------- Point B --------------------------------------------------------------->
-            <div id="point-b" class="point">
-                <div class="input-section">
-                    <span class="label">point b:</span>
-                    <div id="b-coordinateInputs" class="coordinateInputs">
-                        <!-- X Coordinate -->
-                        <label for="b-x">x:</label>
-                        <div class="input-group">
-                            <input id="b-x">
-                            <div id="b-xError" class="error"></div>
-                        </div>
-
-                        <!-- Y Coordinate -->
-                        <label for="b-y">y:</label>
-                        <div class="input-group">
-                            <input id="b-y">
-                            <div id="b-yError" class="error"></div> 
-                        </div>
-
-                        <!-- Z Coordinate -->
-                        <label for="b-z" id="b-zLabel" class="hidden">z:</label>
-                        <div id="b-zInput" class="input-group hidden">
-                            <input id="b-z">
-                            <div id="b-zError" class="error"></div>
-                        </div>
-                        <div id="b-calculateButton">
-                            <button onclick="calculateMortonCode('b')">calculate</button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Output Section -->
-                <div class="output">
-                    <!-- For-Loop -->
-                    <div class="output-section">
-                        <div id="b-magicBitsCodeContainer" class="hidden code-container"></div>
-                        <div id="b-forLoopHeader" class="header-section">
-                            <h3>method: for loop</h3>
-                            <button id="b-show-code-btn" class="show-code-btn"
-                                onclick="toggleCode('b-forLoopCodeContainer', 'b-magicBitsHeader', 'b-show-code-btn', 'b-resultMagicBits', forLoopCode)">
-                                show source code</button>
-                        </div>
-                        <div id="b-resultForLoop" class="result"></div>
+                    <!-- Y Coordinate -->
+                    <label for="a-y">y:</label>
+                    <div class="input-group">
+                        <input id="a-y">
+                        <div id="a-yError" class="error"></div>
                     </div>
 
-                    <!-- Magic Bits -->
-                    <div class="output-section">
-                        <div id="b-forLoopCodeContainer" class="hidden code-container"></div>
-                        <div id="b-magicBitsHeader" class="header-section">
-                            <h3>method: magic bits</h3>
-                            <button id="b-show-code-btn2" class="show-code-btn"
-                                onclick="toggleCode('b-magicBitsCodeContainer', 'b-forLoopHeader','b-show-code-btn2','b-resultForLoop', 'magicBitsCode')">
-                                show source code</button>
-                        </div>
+                    <!-- Z Coordinate -->
+                    <label for="a-z" id="a-zLabel" class="hidden">z:</label>
+                    <div id="a-zInput" class="input-group hidden">
+                        <input id="a-z">
+                        <div id="a-zError" class="error"></div>
+                    </div>
 
-                        <div id="b-resultMagicBits" class="result"></div>
+                    <div id="a-calculateButton">
+                        <button onclick="calculateMortonCode('a'); generateStencil('a')">calculate</button>
                     </div>
                 </div>
             </div>
 
-            <!------------------------------------------------------------------ addition and subtraction --------------------------------------------------------------------->
-            <div id="addition" class="arithmetic">
-                <div class="input-section">
-                    <span class="label">a + b</span>
-                    <div id="a+b-calculateButton">
-                        <button onclick="addition()">calculate</button>
+            <!-- Output Section -->
+            <div class="output">
+                <!-- For-Loop -->
+                <div class="output-section">
+                    <div id="a-magicBitsCodeContainer" class="hidden code-container"></div>
+                    <div id="a-forLoopHeader" class="header-section">
+                        <h3>method: for loop</h3>
+                        <button id="a-show-code-btn" class="show-code-btn"
+                            onclick="toggleCode('a-forLoopCodeContainer', 'a-magicBitsHeader', 'a-show-code-btn', 'a-resultMagicBits', forLoopCode)">
+                            show source code</button>
                     </div>
-                    <div id="additionError" class="arithError"></div>
+                    <div id="a-resultForLoop" class="result"></div>
                 </div>
 
-                <div class="output">
-                    <div id="resultAddition" class="resultArithmetic"></div>
+                <!-- Magic Bits -->
+                <div class="output-section">
+                    <div id="a-forLoopCodeContainer" class="hidden code-container"></div>
+                    <div id="a-magicBitsHeader" class="header-section">
+                        <h3>method: magic bits</h3>
+                        <button id="a-show-code-btn2" class="show-code-btn"
+                            onclick="toggleCode('a-magicBitsCodeContainer', 'a-forLoopHeader','a-show-code-btn2','a-resultForLoop', 'magicBitsCode')">
+                            show source code</button>
+                    </div>
+
+                    <div id="a-resultMagicBits" class="result"></div>
+                </div>
+            </div>
+        </div>
+
+        <div id="stencilContainer-a" class="stencil">
+            <div class="input-section">
+                <span class="label">stencil point a</span>
+            </div>
+            <div class="output">
+                <div id="resultStencil-a" class="resultStencil">
+                    <canvas id="canvasStencil-a" width="1500" height="700"
+                        style="width: 750px; height: 350px;"></canvas>
+                    <div id="stencilResult-a" class="result"></div>
+                </div>
+            </div>
+        </div>
+        <!-------------------------------------------------------------- Point B --------------------------------------------------------------->
+        <div id="point-b" class="point">
+            <div class="input-section">
+                <span class="label">point b:</span>
+                <div id="b-coordinateInputs" class="coordinateInputs">
+                    <!-- X Coordinate -->
+                    <label for="b-x">x:</label>
+                    <div class="input-group">
+                        <input id="b-x">
+                        <div id="b-xError" class="error"></div>
+                    </div>
+
+                    <!-- Y Coordinate -->
+                    <label for="b-y">y:</label>
+                    <div class="input-group">
+                        <input id="b-y">
+                        <div id="b-yError" class="error"></div>
+                    </div>
+
+                    <!-- Z Coordinate -->
+                    <label for="b-z" id="b-zLabel" class="hidden">z:</label>
+                    <div id="b-zInput" class="input-group hidden">
+                        <input id="b-z">
+                        <div id="b-zError" class="error"></div>
+                    </div>
+                    <div id="b-calculateButton">
+                        <button onclick="calculateMortonCode('b'); generateStencil('b')">calculate</button>
+                    </div>
                 </div>
             </div>
 
-            <div id="subtraction" class="arithmetic">
-                <div class="input-section">
-                    <span class="label">a - b</span>
-                    <div id="a-b-calculateButton">
-                        <button onclick="subtraction()">calculate</button>
+            <!-- Output Section -->
+            <div class="output">
+                <!-- For-Loop -->
+                <div class="output-section">
+                    <div id="b-magicBitsCodeContainer" class="hidden code-container"></div>
+                    <div id="b-forLoopHeader" class="header-section">
+                        <h3>method: for loop</h3>
+                        <button id="b-show-code-btn" class="show-code-btn"
+                            onclick="toggleCode('b-forLoopCodeContainer', 'b-magicBitsHeader', 'b-show-code-btn', 'b-resultMagicBits', forLoopCode)">
+                            show source code</button>
                     </div>
-                    <div id="subtractionError" class="arithError"></div>
+                    <div id="b-resultForLoop" class="result"></div>
                 </div>
-                <div class="output">
-                    <div id="resultSubtraction" class="resultArithmetic"></div>
+
+                <!-- Magic Bits -->
+                <div class="output-section">
+                    <div id="b-forLoopCodeContainer" class="hidden code-container"></div>
+                    <div id="b-magicBitsHeader" class="header-section">
+                        <h3>method: magic bits</h3>
+                        <button id="b-show-code-btn2" class="show-code-btn"
+                            onclick="toggleCode('b-magicBitsCodeContainer', 'b-forLoopHeader','b-show-code-btn2','b-resultForLoop', 'magicBitsCode')">
+                            show source code</button>
+                    </div>
+
+                    <div id="b-resultMagicBits" class="result"></div>
                 </div>
+            </div>
+        </div>
+
+        <div id="stencilContainer-b" class="stencil">
+            <div class="input-section">
+                <span class="label">stencil point b</span>
+            </div>
+            <div class="output">
+                <div id="resultStencil-b" class="resultStencil">
+                    <canvas id="canvasStencil-b" width="1500" height="700"
+                        style="width: 750px; height: 350px;"></canvas>
+                    <div id="stencilResult-b" class="result"></div>
+                </div>
+            </div>
+        </div>
+
+        <!------------------------------------------------------------------ addition and subtraction --------------------------------------------------------------------->
+        <div id="addition" class="arithmetic">
+            <div class="input-section">
+                <span class="label">a + b</span>
+                <div id="a+b-calculateButton">
+                    <button onclick="addition()">calculate</button>
+                </div>
+                <div id="additionError" class="arithError"></div>
             </div>
 
-            <!--------------------------------------------------------------------------- stencil ----------------------------------------------------------------------------->
-            <div id="stencilContainer-a" class="stencil">
-                <div class="input-section">
-                    <span class="label">stencil point a</span>
-                    <div id="stencilButton-a">
-                        <button onclick="generateStencil('a')">generate</button>
-                    </div>
-                </div>
-                <div class="output">
-                    <div id="resultStencil-a" class="resultStencil">
-                        <canvas id="canvasStencil-a" width="1500" height="700" style="width: 750px; height: 350px;"></canvas>
-                        <div id="stencilResult-a" class="result"></div>
-                    </div>
-                </div>
+            <div class="output">
+                <div id="resultAddition" class="resultArithmetic"></div>
             </div>
+        </div>
 
-            <div id="stencilContainer-b" class="stencil">
-                <div class="input-section">
-                    <span class="label">stencil point b</span>
-                    <div id="stencilButton-b">
-                        <button onclick="generateStencil('b')">generate</button>
-                    </div>
+        <div id="subtraction" class="arithmetic">
+            <div class="input-section">
+                <span class="label">a - b</span>
+                <div id="a-b-calculateButton">
+                    <button onclick="subtraction()">calculate</button>
                 </div>
-                <div class="output">
-                    <div id="resultStencil-b" class="resultStencil">
-                        <canvas id="canvasStencil-b" width="1500" height="700" style="width: 750px; height: 350px;"></canvas>
-                        <div id="stencilResult-b" class="result"></div>
-                    </div>
-                </div>
+                <div id="subtractionError" class="arithError"></div>
             </div>
+            <div class="output">
+                <div id="resultSubtraction" class="resultArithmetic"></div>
+            </div>
+        </div>
+
+        <!--------------------------------------------------------------------------- stencil ----------------------------------------------------------------------------->
     </div>
-
-    <script src="prism.js"></script>
-    <script src="script.js"></script>
-
 </body>
+
+<script src="prism.js"></script>
+<script src="script.js"></script>
 
 </html>
