--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="settings">
             <div class="select-group">
                 <label for="bitLength">bit length:</label>
-                <select id="bitLength" onchange="displayMaxCoord()">
+                <select id="bitLength" onchange="handleSettingsChange()">
                     <option value="16" selected>16</option>
                     <option value="32">32</option>
                     <option value="64">64</option>
@@ -26,7 +26,7 @@
             <div class="select-group">
                 <label for="dimension">dimension:</label>
                 <select id="dimension"
-                    onchange="toggleCoordinateFields('a'); toggleCoordinateFields('b'); displayMaxCoord(); handleDimensionOrBitLengthChange();">
+                    onchange="handleSettingsChange()">
                     <option value="2" selected>2D</option>
                     <option value="3">3D</option>
                 </select>
@@ -35,7 +35,7 @@
             <div class="select-group hidden" id="layoutContainer">
                 <label for="layout" id="layoutLabel">layout:</label>
                 <select id="layout"
-                    onchange="toggleCoordinateFields('a'); toggleCoordinateFields('b'); displayMaxCoord(); handleDimensionOrBitLengthChange();">
+                    onchange="handleSettingsChange()">
                     <option value="xyz">x, y, z</option>
                     <option value="zyx">z, y, x</option>
                 </select>
@@ -223,8 +223,6 @@
                 <div id="resultSubtraction" class="resultArithmetic"></div>
             </div>
         </div>
-
-        <!--------------------------------------------------------------------------- stencil ----------------------------------------------------------------------------->
     </div>
 </body>
 
