--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
 
                     <div id="a-calculateButton">
-                        <button onclick="calculateMortonCode('a'); generateStencil('a')">calculate</button>
+                        <button onclick="calculateMortonCode('a')">calculate</button>
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                         <div id="b-zError" class="error"></div>
                     </div>
                     <div id="b-calculateButton">
-                        <button onclick="calculateMortonCode('b'); generateStencil('b')">calculate</button>
+                        <button onclick="calculateMortonCode('b')">calculate</button>
                     </div>
                 </div>
             </div>
