stencil container expands when stencil is generated

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="input-section">
                 <span class="label">stencil point a</span>
             </div>
-            <div class="output">
+            <div class="output" style="overflow: hidden;">
                 <div id="resultStencil-a" class="resultStencil">
                     <canvas id="canvasStencil-a" width="1500" height="700"
                         style="width: 750px; height: 350px;"></canvas>
@@ -187,7 +187,7 @@
             <div class="input-section">
                 <span class="label">stencil point b</span>
             </div>
-            <div class="output">
+            <div class="output" style="overflow: hidden;">
                 <div id="resultStencil-b" class="resultStencil">
                     <canvas id="canvasStencil-b" width="1500" height="700"
                         style="width: 750px; height: 350px;"></canvas>
