deleted unused function, small changes

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div id="a-forLoopHeader" class="header-section">
                         <h3>method: for loop</h3>
                         <button id="a-show-code-btn" class="show-code-btn"
-                            onclick="toggleCode('a-forLoopCodeContainer', 'a-magicBitsHeader', 'a-show-code-btn', 'a-resultMagicBits', forLoopCode)">
+                            onclick="showSourceCode('a-forLoopCodeContainer', 'a-magicBitsHeader', 'a-show-code-btn', 'a-resultMagicBits', forLoopCode)">
                             show source code</button>
                     </div>
                     <div id="a-resultForLoop" class="result"></div>
@@ -102,7 +102,7 @@
                     <div id="a-magicBitsHeader" class="header-section">
                         <h3>method: magic bits</h3>
                         <button id="a-show-code-btn2" class="show-code-btn"
-                            onclick="toggleCode('a-magicBitsCodeContainer', 'a-forLoopHeader','a-show-code-btn2','a-resultForLoop', 'magicBitsCode')">
+                            onclick="showSourceCode('a-magicBitsCodeContainer', 'a-forLoopHeader','a-show-code-btn2','a-resultForLoop', 'magicBitsCode')">
                             show source code</button>
                     </div>
 
@@ -162,7 +162,7 @@
                     <div id="b-forLoopHeader" class="header-section">
                         <h3>method: for loop</h3>
                         <button id="b-show-code-btn" class="show-code-btn"
-                            onclick="toggleCode('b-forLoopCodeContainer', 'b-magicBitsHeader', 'b-show-code-btn', 'b-resultMagicBits', forLoopCode)">
+                            onclick="showSourceCode('b-forLoopCodeContainer', 'b-magicBitsHeader', 'b-show-code-btn', 'b-resultMagicBits', forLoopCode)">
                             show source code</button>
                     </div>
                     <div id="b-resultForLoop" class="result"></div>
@@ -174,7 +174,7 @@
                     <div id="b-magicBitsHeader" class="header-section">
                         <h3>method: magic bits</h3>
                         <button id="b-show-code-btn2" class="show-code-btn"
-                            onclick="toggleCode('b-magicBitsCodeContainer', 'b-forLoopHeader','b-show-code-btn2','b-resultForLoop', 'magicBitsCode')">
+                            onclick="showSourceCode('b-magicBitsCodeContainer', 'b-forLoopHeader','b-show-code-btn2','b-resultForLoop', 'magicBitsCode')">
                             show source code</button>
                     </div>
 
