--- a/index.html
+++ b/index.html
@@ -207,8 +207,7 @@
             </div>
             <div class="output" style="overflow: hidden;">
                 <div id="resultStencil-a" class="resultStencil">
-                    <canvas id="canvasStencil-a" width="1500" height="700"
-                        style="width: 750px; height: 350px;"></canvas>
+                    <canvas id="canvasStencil-a"></canvas>
                     <div id="stencilResult-a" class="result"></div>
                 </div>
             </div>
@@ -220,8 +219,7 @@
             </div>
             <div class="output" style="overflow: hidden;">
                 <div id="resultStencil-b" class="resultStencil">
-                    <canvas id="canvasStencil-b" width="1500" height="700"
-                        style="width: 750px; height: 350px;"></canvas>
+                    <canvas id="canvasStencil-a"></canvas>
                     <div id="stencilResult-b" class="result"></div>
                 </div>
             </div>
