stencil design small changes

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             </div>
             <div class="output" style="overflow: hidden;">
                 <div id="resultStencil-b" class="resultStencil">
-                    <canvas id="canvasStencil-a"></canvas>
+                    <canvas id="canvasStencil-b"></canvas>
                     <div id="stencilResult-b" class="result"></div>
                 </div>
             </div>
