added layout icon (svg)

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                     <option value="xyz">x, y, z</option>
                     <option value="zyx">z, y, x</option>
                 </select>
+                <div class="svg-container">
+                    <img id="layoutImage" src="xyz.svg" alt="Layout Visualisierung">
+                </div>
             </div>
         </div>
 
