added svgs to assets folder

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <option value="zyx">z, y, x</option>
                 </select>
                 <div class="svg-container">
-                    <img id="layoutImage" src="xyz.svg" alt="Layout Visualisierung">
+                    <img id="layoutImage" src="assets/xyz.svg">
                 </div>
             </div>
         </div>
