3d stencil output morton codes

--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
             </div>
         </div>
 
+        <!-------------------------------------------------------------------------- stencil ----------------------------------------------------------------------->
 
         <div id="stencilContainer-a" class="stencil">
             <div class="input-section">
