stencil layout fix

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
         <!-------------------------------------------------------------------------- stencil ----------------------------------------------------------------------->
 
-        <div id="stencilContainer-a" class="stencil">
+        <div id="stencilContainer-a" class="stencil hidden">
             <div class="input-section">
                 <span class="label">stencil point a</span>
             </div>
@@ -217,7 +217,7 @@
             </div>
         </div>
 
-        <div id="stencilContainer-b" class="stencil">
+        <div id="stencilContainer-b" class="stencil hidden">
             <div class="input-section">
                 <span class="label">stencil point b</span>
             </div>
